--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google fonts 'Open sans & Raleway'  
-         ---------------------------------------------------------- -->
+    <!-- FONT 'Open sans & Raleway'  
+     -------------------------------------------  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <!-- displays site properly based on user's device 
-        ---------------------------------------------------------- -->
 
+    <!-- Favicon
+    --------------------------------------------  -->
     <link
       rel="icon"
       type="image/png"
@@ -22,11 +22,17 @@
       href="./images/favicon-32x32.png"
     />
 
+    <!-- CSS
+    --------------------------------------------  -->
+    <link rel="stylesheet" href="css/main.css" />
+
+    <!-- TITLE
+    --------------------------------------------  -->
     <title>
       Frontend Mentor | Fylo landing page with dark theme and features grid
     </title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 
+    <!-- Fe
         ------------------------------------------------------------------------ -->
     <style>
       .attribution {
@@ -39,18 +45,26 @@
     </style>
   </head>
   <body>
-    Features Team Sign In All your files in one secure location, accessible
-    anywhere. Fylo stores all your most important files in one secure location.
-    Access them wherever you need, share and collaborate with friends family,
-    and co-workers. Get Started Access your files, anywhere The ability to use a
-    smartphone, tablet, or computer to access your account means your files
-    follow you everywhere. Security you can trust 2-factor authentication and
-    user-controlled encryption are just a couple of the security features we
-    allow to help secure your files. Real-time collaboration Securely share
-    files and folders with friends, family and colleagues for live
-    collaboration. No email attachments required. Store any type of file Whether
-    you're sharing holidays photos or work documents, Fylo has you covered
-    allowing for all file types to be securely stored and shared. Stay
+    <div class="container">
+      <nav class="navbar">
+        <div class="navbar__logo-box">
+          <img src="images/logo.svg" alt="logo" />
+        </div>
+        <ul class="navbar__list">
+          <li class="navbar__item">
+            <a href="#" class="navbar__link"> Features </a>
+          </li>
+          <li class="navbar__item">
+            <a href="#" class="navbar__link"> Team </a>
+          </li>
+          <li class="navbar__item">
+            <a href="#" class="navbar__link"> Sign In </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <!--          Stay
     productive, wherever you are Never let location be an issue when accessing
     your files. Fylo has you covered for all of your file storage needs.
     Securely share files and folders with friends, family and colleagues for
@@ -67,15 +81,15 @@
     questions, our support team would be happy to help you. Get Started For Free
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua +1-543-123-4567
-    example@fylo.com About Us Jobs Press Blog Contact Us Terms Privacy
+    example@fylo.com About Us Jobs Press Blog Contact Us Terms Privacy -->
 
-    <footer>
+    <!-- <footer>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Your Name Here</a>.
       </p>
-    </footer>
+    </footer> -->
   </body>
 </html>
