--- a/index.html
+++ b/index.html
@@ -64,6 +64,27 @@
       </nav>
     </div>
 
+    <header class="header">
+      <div class="header__intro-img">
+        <img src="images/illustration-intro.png" alt="illustration-intro" />
+      </div>
+
+      <div class="header__intro-wrapper">
+        <div class="header__intro">
+          <h1 class="main-heading">
+            All your files in one secure location, accessible anywhere.
+          </h1>
+          <p class="header__intro-text">
+            Fylo stores all your most important files in one secure location.
+            Access them wherever you need, share and collaborate with friends
+            family, and co-workers.
+          </p>
+
+          <button class="cta">Get Started</button>
+        </div>
+      </div>
+    </header>
+
     <!--          Stay
     productive, wherever you are Never let location be an issue when accessing
     your files. Fylo has you covered for all of your file storage needs.
