feature section markup

--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
       rel="stylesheet"
     />
 
-    <!-- Favicon
+    <!-- FAVICON
     --------------------------------------------  -->
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
+    />
+
+    <!-- ICON
+    --------------------------------------------  -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"
     />
 
     <!-- CSS
@@ -85,11 +92,49 @@
       </div>
     </header>
 
-    <!--          Stay
-    productive, wherever you are Never let location be an issue when accessing
-    your files. Fylo has you covered for all of your file storage needs.
-    Securely share files and folders with friends, family and colleagues for
-    live collaboration. No email attachments required. See how Fylo works Fylo
+    <main class="main">
+      <section class="features">
+        <div class="container">
+          <div class="feature">
+            <img src="images/icon-access-anywhere.svg" alt="location icon" />
+            <h3 class="feature__heading">Access your files, anywhere</h3>
+            <p class="feature__text">
+              The ability to use a smartphone, tablet, or computer to access
+              your account means your files follow you everywhere.
+            </p>
+          </div>
+          <div class="feature">
+            <img src="images/icon-security.svg" alt="security icon" />
+            <h3 class="feature__heading">Security you can trust</h3>
+            <p class="feature__text">
+              2-factor authentication and user-controlled encryption are just a
+              couple of the security features we allow to help secure your
+              files.
+            </p>
+          </div>
+          <div class="feature">
+            <img src="images/icon-collaboration.svg" alt="collaboration icon" />
+            <h3 class="feature__heading">Real-time collaboration</h3>
+            <p class="feature__text">
+              Securely share files and folders with friends, family and
+              colleagues for live collaboration. No email attachments required.
+            </p>
+          </div>
+          <div class="feature">
+            <img src="images/icon-any-file.svg" alt="any-file icon" />
+            <h3 class="feature__heading">Store any type of file</h3>
+            <p class="feature__text">
+              Whether you're sharing holidays photos or work documents, Fylo has
+              you covered allowing for all file types to be securely stored and
+              shared.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!--          
+     See how Fylo works Fylo
     has improved our team productivity by an order of magnitude. Since making
     the switch our team has become a well-oiled collaboration machine. Satish
     Patel Founder & CEO, Huddle Fylo has improved our team productivity by an
