--- a/index.html
+++ b/index.html
@@ -131,20 +131,38 @@
           </div>
         </div>
       </section>
+
+      <section class="productive">
+        <div class="container">
+          <img
+            src="images/illustration-stay-productive.png"
+            alt="illustration-stay-productive"
+          />
+          <div class="productive-texts">
+            <h3 class="feature__heading">Stay productive, wherever you are</h3>
+            <p>
+              Never let location be an issue when accessing your files. Fylo has
+              you covered for all of your file storage needs.
+            </p>
+            <p>
+              Securely share files and folders with friends, family and
+              colleagues for live collaboration. No email attachments required.
+            </p>
+            <a href="#">
+              <button class="how-it-work-btn">
+                See how Fylo works
+
+                <span class="icon">
+                  <i class="lnr lnr-arrow-right"></i>
+                </span>
+              </button>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <!--          
-     See how Fylo works Fylo
-    has improved our team productivity by an order of magnitude. Since making
-    the switch our team has become a well-oiled collaboration machine. Satish
-    Patel Founder & CEO, Huddle Fylo has improved our team productivity by an
-    order of magnitude. Since making the switch our team has become a well-oiled
-    collaboration machine. Bruce McKenzie Founder & CEO, Huddle Fylo has
-    improved our team productivity by an order of magnitude. Since making the
-    switch our team has become a well-oiled collaboration machine. Iva Boyd
-    Founder & CEO, Huddle Get early access today It only takes a minute to sign
-    up and our free starter tier is extremely generous. If you have any
-    questions, our support team would be happy to help you. Get Started For Free
+    <!--   
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua +1-543-123-4567
     example@fylo.com About Us Jobs Press Blog Contact Us Terms Privacy -->
