--- a/index.html
+++ b/index.html
@@ -160,6 +160,69 @@
           </div>
         </div>
       </section>
+
+      <section class="testimonial">
+        <div class="container">
+          <div class="cards">
+            <div class="card card--1">
+              <p class="card__text">
+                Fylo has improved our team productivity by an order of
+                magnitude. Since making the switch our team has become a
+                well-oiled collaboration machine.
+              </p>
+              <div class="card__reviewer">
+                <img
+                  src="images/profile-1.jpg"
+                  alt="reviewer"
+                  class="card__reviewer-img"
+                />
+                <div class="card__reviewer-name">
+                  <h4>Satish Patel</h4>
+                  <p>Founder & CEO, Huddle</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <p class="card__text">
+                Fylo has improved our team productivity by an order of
+                magnitude. Since making the switch our team has become a
+                well-oiled collaboration machine.
+              </p>
+              <div class="card__reviewer">
+                <img
+                  src="images/profile-2.jpg"
+                  alt="reviewer"
+                  class="card__reviewer-img"
+                />
+                <div class="card__reviewer-name">
+                  <h4>Bruce McKenzie</h4>
+                  <p>Founder & CEO, Huddle</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <p class="card__text">
+                Fylo has improved our team productivity by an order of
+                magnitude. Since making the switch our team has become a
+                well-oiled collaboration machine.
+              </p>
+              <div class="card__reviewer">
+                <img
+                  src="images/profile-2.jpg"
+                  alt="reviewer"
+                  class="card__reviewer-img"
+                />
+                <div class="card__reviewer-name">
+                  <h4>Iva Boyd</h4>
+                  <p>Founder & CEO, Huddle</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--   
