--- a/index.html
+++ b/index.html
@@ -223,6 +223,27 @@
           </div>
         </div>
       </section>
+
+      <section class="subscribe">
+        <div class="container">
+          <h3 class="feature__heading">Get early access today</h3>
+          <p>
+            It only takes a minute to sign up and our free starter tier is
+            extremely generous. If you have any questions, our support team
+            would be happy to help you.
+          </p>
+
+          <form action="#" class="form">
+            <input
+              type="email"
+              name="email"
+              placeholder="email@example.com"
+              id="email"
+            />
+            <button type="submit">Get Started For Free</button>
+          </form>
+        </div>
+      </section>
     </main>
 
     <!--   
