--- a/index.html
+++ b/index.html
@@ -151,10 +151,11 @@
             <a href="#">
               <button class="how-it-work-btn">
                 See how Fylo works
-
-                <span class="icon">
-                  <i class="lnr lnr-arrow-right"></i>
-                </span>
+                <img
+                  src="images/icon-arrow.svg"
+                  alt="arrow icon"
+                  class="icon"
+                />
               </button>
             </a>
           </div>
@@ -240,7 +241,8 @@
               placeholder="email@example.com"
               id="email"
             />
-            <button type="submit">Get Started For Free</button>
+            <p class="validation-text"></p>
+            <button type="submit" class="form-btn">Get Started For Free</button>
           </form>
         </div>
       </section>
