--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"
     />
 
+    <!-- JS
+    --------------------------------------------  -->
+    <script src="js/script.js" defer></script>
+
     <!-- CSS
     --------------------------------------------  -->
     <link rel="stylesheet" href="css/main.css" />
