--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     --------------------------------------------  -->
     <link
       rel="stylesheet"
-      href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <!-- JS
@@ -252,10 +255,56 @@
       </section>
     </main>
 
+    <footer id="footer">
+      <div class="row">
+        <div class="col-1">
+          <div class="footer__logo">
+            <img src="images/logo.svg" alt="logo" />
+          </div>
+          <div class="footer__info">
+            <img src="images/icon-location.svg" alt="location icon" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua
+            </p>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="footer__info">
+            <img src="images/icon-phone.svg" alt="icon phone" />
+            <p><a href="tel:+1-543-123-4567">+1-543-123-4567</a></p>
+          </div>
+          <div class="footer__info">
+            <img src="images/icon-email.svg" alt="icon email" />
+            <p><a href="mailto:example@fylo.com">example@fylo.com</a></p>
+          </div>
+        </div>
+        <div class="col-3">
+          <ul>
+            <li>About Us</li>
+            <li>Jobs</li>
+            <li>Press</li>
+            <li>Blog</li>
+          </ul>
+          <ul>
+            <li>Contact Us</li>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </ul>
+        </div>
+        <div class="col-4">
+          <div class="social-icons">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!--   
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua +1-543-123-4567
-    example@fylo.com About Us Jobs Press Blog Contact Us Terms Privacy -->
+     
+     About Us Jobs Press Blog Contact Us Terms Privacy -->
 
     <!-- <footer>
       <p class="attribution">
