--- a/index.html
+++ b/index.html
@@ -255,21 +255,21 @@
       </section>
     </main>
 
-    <footer id="footer">
+    <footer id="footer" class="footer">
       <div class="row">
-        <div class="col-1">
+        <div class="col-1 footer--col-1 col">
           <div class="footer__logo">
             <img src="images/logo.svg" alt="logo" />
           </div>
-          <div class="footer__info">
+          <div class="footer__info footer__info--col-1">
             <img src="images/icon-location.svg" alt="location icon" />
-            <p>
+            <p class="footer__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua
             </p>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-2 col">
           <div class="footer__info">
             <img src="images/icon-phone.svg" alt="icon phone" />
             <p><a href="tel:+1-543-123-4567">+1-543-123-4567</a></p>
@@ -279,32 +279,37 @@
             <p><a href="mailto:example@fylo.com">example@fylo.com</a></p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col">
           <ul>
-            <li>About Us</li>
-            <li>Jobs</li>
-            <li>Press</li>
-            <li>Blog</li>
+            <a href="#"><li>About Us</li></a>
+            <a href="#">
+              <li>Jobs</li>
+            </a>
+            <a href="#">
+              <li>Press</li>
+            </a>
+
+            <a href="#">
+              <li>Blog</li>
+            </a>
           </ul>
           <ul>
-            <li>Contact Us</li>
-            <li>Terms</li>
-            <li>Privacy</li>
+            <a href="#"> <li>Contact Us</li></a>
+            <a href="#"><li>Terms</li></a>
+            <a href="#"> <li>Privacy</li></a>
           </ul>
         </div>
-        <div class="col-4">
+        <div class="col-4 col">
           <div class="social-icons">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
+            <a href="#"> <i class="fab fa-facebook-f"></i></a>
+
+            <a href="#"> <i class="fab fa-twitter"></i></a>
+
+            <a href="#"><i class="fab fa-instagram"></i> </a>
           </div>
         </div>
       </div>
     </footer>
-
-    <!--   
-     
-     About Us Jobs Press Blog Contact Us Terms Privacy -->
 
     <!-- <footer>
       <p class="attribution">
