--- a/index.html
+++ b/index.html
@@ -83,59 +83,56 @@
         <img src="images/illustration-intro.png" alt="illustration-intro" />
       </div>
 
-      <div class="header__intro-wrapper">
-        <div class="header__intro">
-          <h1 class="main-heading">
-            All your files in one secure location, accessible anywhere.
-          </h1>
-          <p class="header__intro-text">
-            Fylo stores all your most important files in one secure location.
-            Access them wherever you need, share and collaborate with friends
-            family, and co-workers.
-          </p>
+      <!-- <div class="header__intro-wrapper"> -->
+      <div class="header__intro">
+        <h1 class="main-heading">
+          All your files in one secure location, accessible anywhere.
+        </h1>
+        <p class="header__intro-text">
+          Fylo stores all your most important files in one secure location.
+          Access them wherever you need, share and collaborate with friends
+          family, and co-workers.
+        </p>
 
-          <button class="cta">Get Started</button>
-        </div>
+        <button class="cta">Get Started</button>
       </div>
+      <!-- </div> -->
     </header>
 
     <main class="main">
       <section class="features">
-        <div class="container">
-          <div class="feature">
-            <img src="images/icon-access-anywhere.svg" alt="location icon" />
-            <h3 class="feature__heading">Access your files, anywhere</h3>
-            <p class="feature__text">
-              The ability to use a smartphone, tablet, or computer to access
-              your account means your files follow you everywhere.
-            </p>
-          </div>
-          <div class="feature">
-            <img src="images/icon-security.svg" alt="security icon" />
-            <h3 class="feature__heading">Security you can trust</h3>
-            <p class="feature__text">
-              2-factor authentication and user-controlled encryption are just a
-              couple of the security features we allow to help secure your
-              files.
-            </p>
-          </div>
-          <div class="feature">
-            <img src="images/icon-collaboration.svg" alt="collaboration icon" />
-            <h3 class="feature__heading">Real-time collaboration</h3>
-            <p class="feature__text">
-              Securely share files and folders with friends, family and
-              colleagues for live collaboration. No email attachments required.
-            </p>
-          </div>
-          <div class="feature">
-            <img src="images/icon-any-file.svg" alt="any-file icon" />
-            <h3 class="feature__heading">Store any type of file</h3>
-            <p class="feature__text">
-              Whether you're sharing holidays photos or work documents, Fylo has
-              you covered allowing for all file types to be securely stored and
-              shared.
-            </p>
-          </div>
+        <div class="feature">
+          <img src="images/icon-access-anywhere.svg" alt="location icon" />
+          <h3 class="feature__heading">Access your files, anywhere</h3>
+          <p class="feature__text">
+            The ability to use a smartphone, tablet, or computer to access your
+            account means your files follow you everywhere.
+          </p>
+        </div>
+        <div class="feature">
+          <img src="images/icon-security.svg" alt="security icon" />
+          <h3 class="feature__heading">Security you can trust</h3>
+          <p class="feature__text">
+            2-factor authentication and user-controlled encryption are just a
+            couple of the security features we allow to help secure your files.
+          </p>
+        </div>
+        <div class="feature">
+          <img src="images/icon-collaboration.svg" alt="collaboration icon" />
+          <h3 class="feature__heading">Real-time collaboration</h3>
+          <p class="feature__text">
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required.
+          </p>
+        </div>
+        <div class="feature">
+          <img src="images/icon-any-file.svg" alt="any-file icon" />
+          <h3 class="feature__heading">Store any type of file</h3>
+          <p class="feature__text">
+            Whether you're sharing holidays photos or work documents, Fylo has
+            you covered allowing for all file types to be securely stored and
+            shared.
+          </p>
         </div>
       </section>
 
@@ -144,6 +141,7 @@
           <img
             src="images/illustration-stay-productive.png"
             alt="illustration-stay-productive"
+            class="productive-img"
           />
           <div class="productive-texts">
             <h3 class="feature__heading">Stay productive, wherever you are</h3>
