--- a/index.html
+++ b/index.html
@@ -346,6 +346,14 @@
           </div>
         </div>
       </section>
+
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/Ar1f007">Ariful Hoque Al Amin</a>.
+      </p>
     </footer>
   </body>
 </html>
