fixed few accessibility issues

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <section class="features">
         <div class="feature">
           <img src="images/icon-access-anywhere.svg" alt="location icon" />
-          <h3 class="feature__heading">Access your files, anywhere</h3>
+          <h2 class="feature__heading">Access your files, anywhere</h2>
           <p class="feature__text">
             The ability to use a smartphone, tablet, or computer to access your
             account means your files follow you everywhere.
@@ -109,7 +109,7 @@
         </div>
         <div class="feature">
           <img src="images/icon-security.svg" alt="security icon" />
-          <h3 class="feature__heading">Security you can trust</h3>
+          <h2 class="feature__heading">Security you can trust</h2>
           <p class="feature__text">
             2-factor authentication and user-controlled encryption are just a
             couple of the security features we allow to help secure your files.
@@ -117,7 +117,7 @@
         </div>
         <div class="feature">
           <img src="images/icon-collaboration.svg" alt="collaboration icon" />
-          <h3 class="feature__heading">Real-time collaboration</h3>
+          <h2 class="feature__heading">Real-time collaboration</h2>
           <p class="feature__text">
             Securely share files and folders with friends, family and colleagues
             for live collaboration. No email attachments required.
@@ -125,7 +125,7 @@
         </div>
         <div class="feature">
           <img src="images/icon-any-file.svg" alt="any-file icon" />
-          <h3 class="feature__heading">Store any type of file</h3>
+          <h2 class="feature__heading">Store any type of file</h2>
           <p class="feature__text">
             Whether you're sharing holidays photos or work documents, Fylo has
             you covered allowing for all file types to be securely stored and
@@ -142,7 +142,7 @@
             class="productive-img"
           />
           <div class="productive-texts">
-            <h3 class="feature__heading">Stay productive, wherever you are</h3>
+            <h2 class="feature__heading">Stay productive, wherever you are</h2>
             <p>
               Never let location be an issue when accessing your files. Fylo has
               you covered for all of your file storage needs.
@@ -268,7 +268,7 @@
     <footer id="footer" class="footer">
       <section class="subscribe">
         <div class="container">
-          <h3 class="feature__heading">Get early access today</h3>
+          <h2 class="feature__heading">Get early access today</h2>
           <p>
             It only takes a minute to sign up and our free starter tier is
             extremely generous. If you have any questions, our support team
@@ -315,31 +315,30 @@
           </div>
           <div class="col-3 col">
             <ul>
-              <a href="#"><li>About Us</li></a>
-              <a href="#">
-                <li>Jobs</li>
-              </a>
-              <a href="#">
-                <li>Press</li>
-              </a>
-
-              <a href="#">
-                <li>Blog</li>
-              </a>
+              <li><a href="#">About US</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Blog</a></li>
             </ul>
             <ul>
-              <a href="#"> <li>Contact Us</li></a>
-              <a href="#"><li>Terms</li></a>
-              <a href="#"> <li>Privacy</li></a>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Terms</a></li>
+              <li><a href="#">Privacy</a></li>
             </ul>
           </div>
           <div class="col-4 col">
             <div class="social-icons">
-              <a href="#"> <i class="fab fa-facebook-f"></i></a>
+              <a href="#" aria-label="Facebook handle"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
 
-              <a href="#"> <i class="fab fa-twitter"></i></a>
+              <a href="#" aria-label="Twitter handle"
+                ><i class="fab fa-twitter"></i
+              ></a>
 
-              <a href="#"><i class="fab fa-instagram"></i> </a>
+              <a href="#" aria-label="Instagram handle"
+                ><i class="fab fa-instagram"></i>
+              </a>
             </div>
           </div>
         </div>
